#1692 Refactored DynamicEntityTypeModificationTest.
Improved typing, comments and adjusted some tests to take subtyping
rules into account.