@@ -3,8 +3,6 @@ package ua.com.fielden.platform.reflection.asm.impl;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
@@ -13,6 +11,8 @@ import java.lang.reflect.Method;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.List;
+import java.util.stream.Stream;
 
 import org.junit.Before;
 import org.junit.Test;
@@ -22,7 +22,6 @@ import com.google.inject.Injector;
 import ua.com.fielden.platform.associations.one2many.DetailsEntityForOneToManyAssociation;
 import ua.com.fielden.platform.associations.one2many.MasterEntityWithOneToManyAssociation;
 import ua.com.fielden.platform.associations.one2many.MasterEntityWithOneToManyCollectionalAssociationProvidedWithLinkPropValue;
-import ua.com.fielden.platform.entity.AbstractEntity;
 import ua.com.fielden.platform.entity.annotation.Calculated;
 import ua.com.fielden.platform.entity.annotation.IsProperty;
 import ua.com.fielden.platform.entity.annotation.factory.CalculatedAnnotation;
@@ -77,15 +76,14 @@ public class DynamicEntityTypeModificationTest {
 
     @Test
     public void test_preconditions() throws Exception {
-        final Class<? extends AbstractEntity> entityBeingEnhancedEnhancedType = (Class<? extends AbstractEntity>)
-                cl.startModification(EntityBeingEnhanced.class)
+        final Class<? extends EntityBeingEnhanced> modEntityBeingEnhanced = cl.startModification(EntityBeingEnhanced.class)
                 .addProperties(pd)
                 .endModification();
         // specify what property of what owning type should be replaced with the enhanced entity type
-        final NewProperty mp = NewProperty.changeType("prop1", entityBeingEnhancedEnhancedType);
+        final NewProperty np = NewProperty.changeType("prop1", modEntityBeingEnhanced);
         try {
             final TypeMaker tp = new TypeMaker(cl, EntityBeingEnhanced.class);
-            tp.modifyProperties(mp).endModification();
+            tp.modifyProperties(np).endModification();
             fail("An exception should have been thrown due to omitted startModification call.");
         } catch (final Exception e) {
         }
@@ -93,251 +91,279 @@ public class DynamicEntityTypeModificationTest {
 
     @Test
     public void test_to_ensure_several_properties_can_be_modified() throws Exception {
-        // get the enhanced EntityBeingEnhanced type
-        final Class<?> entityBeingEnhancedEnhancedType = cl.startModification(EntityBeingEnhanced.class)
+        // enhance(EntityBeingEnhanced)
+        final Class<? extends EntityBeingEnhanced> modEntityBeingEnhanced = cl.startModification(EntityBeingEnhanced.class)
                 .addProperties(pd)
                 .endModification();
-        // specify that what property prop1@EntityBeingModified should have its type replaced with entityBeingEnhancedEnhancedType
-        final NewProperty mp = NewProperty.changeType("prop1", entityBeingEnhancedEnhancedType);
+        // EntityBeingModified.prop1 should have its type replaced with modEntityBeingEnhanced
+        final NewProperty np = NewProperty.changeType("prop1", modEntityBeingEnhanced);
         // get the modified EntityBeingModified type
-        final Class<?> entityBeingModifiedModifiedType = cl.startModification(EntityBeingModified.class)
-                .modifyProperties(mp)
+        final Class<? extends EntityBeingModified> entityBeingModifiedModifiedType = cl.startModification(EntityBeingModified.class)
+                .modifyProperties(np)
                 .endModification();
-        // specify that properties prop1@TopLevelEntity and prop2@TopLevelEntity should have their type replaced with entityBeingModifiedModifiedType
-        final NewProperty topLevelMp1 = NewProperty.changeType("prop1", entityBeingModifiedModifiedType);
-        final NewProperty topLevelMp2 = NewProperty.changeType("prop2", entityBeingModifiedModifiedType);
+        // TopLevelEntity.prop1 and TopLevelEntity.prop2 should have their type replaced with entityBeingModifiedModifiedType
+        final NewProperty topLevelNp1 = NewProperty.changeType("prop1", entityBeingModifiedModifiedType);
+        final NewProperty topLevelNp2 = NewProperty.changeType("prop2", entityBeingModifiedModifiedType);
         // get the modified TopLevelEntity type
         final Class<?> topLevelEntityModifiedType = cl.startModification(TopLevelEntity.class)
-                .modifyProperties(topLevelMp1, topLevelMp2)
+                .modifyProperties(topLevelNp1, topLevelNp2)
                 .endModification();
 
         final Field prop1 = topLevelEntityModifiedType.getDeclaredField("prop1");
-        final Field prop2 = topLevelEntityModifiedType.getDeclaredField("prop2");
+        assertNotNull("Modified property should be declared by the enhanced type.", prop1);
         assertEquals("Incorrect property type after modification", entityBeingModifiedModifiedType, prop1.getType());
+
+        final Field prop2 = topLevelEntityModifiedType.getDeclaredField("prop2");
+        assertNotNull("Modified property should be declared by the enhanced type.", prop2);
         assertEquals("Incorrect property type after modification", entityBeingModifiedModifiedType, prop2.getType());
+
         assertEquals("prop 1 and prop 2 should be of the same type", prop2.getType(), prop1.getType());
     }
 
     @Test
     public void test_sequential_modificaton_of_properties() throws Exception {
-        // get the enhanced EntityBeingEnhanced type
-        final Class<?> entityBeingEnhancedEnhancedType = cl.startModification(EntityBeingEnhanced.class)
+        // enhance(EntityBeingEnhanced)
+        final Class<? extends EntityBeingEnhanced> modEntityBeingEnhanced = cl.startModification(EntityBeingEnhanced.class)
                 .addProperties(pd)
                 .endModification();
-        // specify that what property prop1@EntityBeingModified should have its type replaced with entityBeingEnhancedEnhancedType
-        final NewProperty mp = NewProperty.changeType("prop1", entityBeingEnhancedEnhancedType);
+        // EntityBeingModified.prop1 should have its type replaced with modEntityBeingEnhanced
+        final NewProperty np = NewProperty.changeType("prop1", modEntityBeingEnhanced);
         // get the modified EntityBeingModified type
         final Class<?> entityBeingModifiedModifiedType = cl.startModification(EntityBeingModified.class)
-                .modifyProperties(mp)
+                .modifyProperties(np)
                 .endModification();
-        // specify that properties prop1@TopLevelEntity and prop2@TopLevelEntity should have their type replaced with entityBeingModifiedModifiedType
-        final NewProperty topLevelMp1 = NewProperty.changeType("prop1", entityBeingModifiedModifiedType);
-        final NewProperty topLevelMp2 = NewProperty.changeType("prop2", entityBeingModifiedModifiedType);
+        // TopLevelEntity.prop1 and TopLevelEntity.prop2 should have their type replaced with entityBeingModifiedModifiedType
+        final NewProperty topLevelNp1 = NewProperty.changeType("prop1", entityBeingModifiedModifiedType);
+        final NewProperty topLevelNp2 = NewProperty.changeType("prop2", entityBeingModifiedModifiedType);
         // get the modified TopLevelEntity type
         final Class<?> topLevelEntityModifiedType = cl.startModification(TopLevelEntity.class)
-                .modifyProperties(topLevelMp1)
-                .modifyProperties(topLevelMp2)
+                .modifyProperties(topLevelNp1)
+                .modifyProperties(topLevelNp2)
                 .endModification();
 
         final Field prop1 = topLevelEntityModifiedType.getDeclaredField("prop1");
-        final Field prop2 = topLevelEntityModifiedType.getDeclaredField("prop2");
+        assertNotNull("Modified property should be declared by the enhanced type.", prop1);
         assertEquals("Incorrect property type after modification", entityBeingModifiedModifiedType, prop1.getType());
+
+        final Field prop2 = topLevelEntityModifiedType.getDeclaredField("prop2");
+        assertNotNull("Modified property should be declared by the enhanced type.", prop2);
         assertEquals("Incorrect property type after modification", entityBeingModifiedModifiedType, prop2.getType());
+
         assertEquals("prop 1 and prop 2 should be of the same type", prop2.getType(), prop1.getType());
     }
 
     @Test
     public void test_modification_of_properties_to_modified_type() throws Exception {
-        // get the enhanced EntityBeingEnhanced type
-        final Class<?> entityBeingEnhancedEnhancedType = cl.startModification(EntityBeingEnhanced.class)
+        // enhance(EntityBeingEnhanced)
+        final Class<?> modEntityBeingEnhanced = cl.startModification(EntityBeingEnhanced.class)
                 .addProperties(pd)
                 .endModification();
-        // specify that what property prop1@EntityBeingModified should have its type replaced with entityBeingEnhancedEnhancedType
-        final NewProperty mp = NewProperty.changeType("prop1", entityBeingEnhancedEnhancedType);
+        // EntityBeingModified.prop1 should have its type replaced with modEntityBeingEnhanced
+        final NewProperty np = NewProperty.changeType("prop1", modEntityBeingEnhanced);
         // get the modified EntityBeingModified type
         final Class<?> entityBeingModifiedModifiedType = cl.startModification(EntityBeingModified.class)
-                .modifyProperties(mp)
+                .modifyProperties(np)
                 .endModification();
-        // specify that properties prop1@TopLevelEntity and prop2@TopLevelEntity should have their type replaced with entityBeingModifiedModifiedType
-        final NewProperty topLevelMp1 = NewProperty.changeType("prop1", entityBeingModifiedModifiedType);
-        final NewProperty topLevelMp2 = NewProperty.changeType("prop2", entityBeingModifiedModifiedType);
+        // TopLevelEntity.prop1 and TopLevelEntity.prop2 should have their type replaced with entityBeingModifiedModifiedType
+        final NewProperty topLevelNp1 = NewProperty.changeType("prop1", entityBeingModifiedModifiedType);
+        final NewProperty topLevelNp2 = NewProperty.changeType("prop2", entityBeingModifiedModifiedType);
         // get the modified TopLevelEntity type
         final Class<?> topLevelEntityModifiedType1 = cl.startModification(TopLevelEntity.class)
-                .modifyProperties(topLevelMp1)
+                .modifyProperties(topLevelNp1)
                 .endModification();
         final Class<?> topLevelEntityModifiedType2 = cl.startModification(topLevelEntityModifiedType1)
-                .modifyProperties(topLevelMp2)
+                .modifyProperties(topLevelNp2)
                 .endModification();
 
-        final Field prop1 = topLevelEntityModifiedType2.getDeclaredField("prop1");
-        final Field prop2 = topLevelEntityModifiedType2.getDeclaredField("prop2");
+        final Field prop1 = Finder.getFieldByName(topLevelEntityModifiedType2, "prop1");
+        assertNotNull("Property modified by an enhanced type should be accessible to a derived enhanced type.", prop1);
         assertEquals("Incorrect property type after modification", entityBeingModifiedModifiedType, prop1.getType());
+
+        final Field prop2 = topLevelEntityModifiedType2.getDeclaredField("prop2");
+        assertNotNull("Modified property should be declared by the enhanced type.", prop2);
         assertEquals("Incorrect property type after modification", entityBeingModifiedModifiedType, prop2.getType());
+
         assertEquals("prop 1 and prop 2 should be of the same type", prop2.getType(), prop1.getType());
     }
 
     @Test
     public void test_new_type_name_generation() throws Exception {
-        // get the enhanced EntityBeingEnhanced type
-        final Class<?> entityBeingEnhancedEnhancedType = cl.startModification(EntityBeingEnhanced.class)
+        // enhance(EntityBeingEnhanced)
+        final Class<? extends EntityBeingEnhanced> modEntityBeingEnhanced = cl.startModification(EntityBeingEnhanced.class)
                 .addProperties(pd)
                 .endModification();
-        // specify that what property prop1@EntityBeingModified should have its type replaced with entityBeingEnhancedEnhancedType
-        final NewProperty mp = NewProperty.changeType("prop1", entityBeingEnhancedEnhancedType);
+        // EntityBeingModified.prop1 should have its type replaced with modEntityBeingEnhanced
+        final NewProperty np = NewProperty.changeType("prop1", modEntityBeingEnhanced);
         // get the modified EntityBeingModified type
         final Class<?> entityBeingModifiedModifiedType = cl.startModification(EntityBeingModified.class)
-                .modifyProperties(mp)
+                .modifyProperties(np)
                 .endModification();
-        // specify that properties prop1@TopLevelEntity and prop2@TopLevelEntity should have their type replaced with entityBeingModifiedModifiedType
-        final NewProperty topLevelMp1 = NewProperty.changeType("prop1", entityBeingModifiedModifiedType);
-        final NewProperty topLevelMp2 = NewProperty.changeType("prop2", entityBeingModifiedModifiedType);
+        // TopLevelEntity.prop1 and TopLevelEntity.prop2 should have their type replaced with entityBeingModifiedModifiedType
+        final NewProperty topLevelNp1 = NewProperty.changeType("prop1", entityBeingModifiedModifiedType);
+        final NewProperty topLevelNp2 = NewProperty.changeType("prop2", entityBeingModifiedModifiedType);
         // get the modified TopLevelEntity type
         final Class<?> topLevelEntityModifiedType1 = cl.startModification(TopLevelEntity.class)
-                .modifyProperties(topLevelMp1)
+                .modifyProperties(topLevelNp1)
                 .endModification();
         final Class<?> topLevelEntityModifiedType2 = cl.startModification(topLevelEntityModifiedType1)
-                .modifyProperties(topLevelMp2)
+                .modifyProperties(topLevelNp2)
                 .endModification();
 
-        assertTrue("Incorrect type name.", 
-                entityBeingEnhancedEnhancedType.getName().startsWith(
+        assertTrue("Incorrect type name.", modEntityBeingEnhanced.getName().startsWith(
                         EntityBeingEnhanced.class.getName() + DynamicTypeNamingService.APPENDIX + "_"));
-        assertTrue("Incorrect type name.",
-                entityBeingModifiedModifiedType.getName().startsWith(
+        assertTrue("Incorrect type name.", entityBeingModifiedModifiedType.getName().startsWith(
                         EntityBeingModified.class.getName() + DynamicTypeNamingService.APPENDIX + "_"));
-        assertTrue("Incorrect type name.",
-                topLevelEntityModifiedType1.getName().startsWith(
+        assertTrue("Incorrect type name.", topLevelEntityModifiedType1.getName().startsWith(
                         TopLevelEntity.class.getName() + DynamicTypeNamingService.APPENDIX + "_"));
-        assertTrue("Incorrect type name.",
-                topLevelEntityModifiedType2.getName().startsWith(
+        assertTrue("Incorrect type name.", topLevelEntityModifiedType2.getName().startsWith(
                         TopLevelEntity.class.getName() + DynamicTypeNamingService.APPENDIX + "_"));
-        assertNotSame(entityBeingEnhancedEnhancedType.getName(), entityBeingModifiedModifiedType.getName());
-        assertNotSame(topLevelEntityModifiedType1.getName(), topLevelEntityModifiedType2.getName());
+
+        // make sure that names are unique
+        final List<String> names = Stream.of(modEntityBeingEnhanced, entityBeingModifiedModifiedType,
+                                             topLevelEntityModifiedType1, topLevelEntityModifiedType2)
+                                         .map(Class::getName).toList();
+        assertEquals("Generated types' names are not unique", names.size(), names.stream().distinct().count());
     }
 
     @Test
-    public void test_instantiation_of_entity_being_modified() throws Exception {
-        final Class<? extends AbstractEntity> entityBeingEnhancedEnhancedType = (Class<? extends AbstractEntity>) 
-                cl.startModification(EntityBeingEnhanced.class)
+    public void test_instantiation_of_enhanced_type() throws Exception {
+        final Class<? extends EntityBeingEnhanced> modEntityBeingEnhanced = cl.startModification(EntityBeingEnhanced.class)
                 .addProperties(pd)
                 .endModification();
 
-        // specify what property of what owning type should be replaced with the enhanced entity type
-        final NewProperty mp = NewProperty.changeType("prop1", entityBeingEnhancedEnhancedType);
-        final Class<?> entityBeingModifiedModifiedType = cl.startModification(EntityBeingModified.class)
-                .modifyProperties(mp)
+        // modify a property of the owning type by settings its type to the enhanced one
+        final NewProperty np = NewProperty.changeType("prop1", modEntityBeingEnhanced);
+        final Class<? extends EntityBeingModified> entityBeingModifiedModifiedType = cl.startModification(EntityBeingModified.class)
+                .modifyProperties(np)
                 .endModification();
+
         // create a new instance of the modified type
-        final Object modifiedEntity = entityBeingModifiedModifiedType.newInstance();
+        final EntityBeingModified modifiedEntity = entityBeingModifiedModifiedType.getConstructor().newInstance();
         assertNotNull("Should not be null.", modifiedEntity);
     }
 
     @Test
     public void test_correct_modification_of_entity_being_modified() throws Exception {
-        final Class<?> entityBeingEnhancedEnhancedType = cl.startModification(EntityBeingEnhanced.class)
+        final Class<? extends EntityBeingEnhanced> modEntityBeingEnhanced = cl.startModification(EntityBeingEnhanced.class)
                 .addProperties(pd)
                 .endModification();
-        // specify what property of what owning type should be replaced with the enhanced entity type
-        final NewProperty mp = NewProperty.changeType("prop1", entityBeingEnhancedEnhancedType);
-        final Class<?> entityBeingModifiedModifiedType = cl.startModification(EntityBeingModified.class)
-                .modifyProperties(mp)
+
+        // modify a property of the owning type by settings its type to the enhanced one
+        final NewProperty np = NewProperty.changeType("prop1", modEntityBeingEnhanced);
+        final Class<? extends EntityBeingModified> entityBeingModifiedModifiedType = cl.startModification(EntityBeingModified.class)
+                .modifyProperties(np)
                 .endModification();
+
         // create a new instance of the modified type
-        final Object modifiedEntity = entityBeingModifiedModifiedType.newInstance();
+        final EntityBeingModified modifiedEntity = entityBeingModifiedModifiedType.getConstructor().newInstance();
         assertNotNull("Should not be null.", modifiedEntity);
-        // let's ensure that property types are compatible -- prop2 should be compatible with prop1 as its type is a super class for type of prop1
+
+        // let's ensure that property types are compatible 
+        // original prop2 and prop1 are of the same type - EntityBeingEnhanced
+        // *unenhanced* prop2 should be compatible with the *enhanced* prop1
         final Field enhancedProp = Finder.findFieldByName(entityBeingModifiedModifiedType, "prop1");
         final Field unenhancedProp = Finder.findFieldByName(entityBeingModifiedModifiedType, "prop2");
-        assertTrue("Incorrect property type.",
-                enhancedProp.getType().getName().startsWith(
-                        EntityBeingEnhanced.class.getName() + DynamicTypeNamingService.APPENDIX + "_"));
-        assertEquals("Incorrect property type.", EntityBeingEnhanced.class.getName(), unenhancedProp.getType().getName());
-        assertFalse("Original type should not be assignable to the enhanced type", unenhancedProp.getType().isAssignableFrom(enhancedProp.getType()));
-        assertFalse("Enhanced type should not be assignable to the original type", enhancedProp.getType().isAssignableFrom(unenhancedProp.getType()));
+        assertTrue("Incorrect enhanced property type.", enhancedProp.getType().getName().startsWith(
+                EntityBeingEnhanced.class.getName() + DynamicTypeNamingService.APPENDIX + "_"));
+        assertEquals("Incorrect unenhanced property type.", EntityBeingEnhanced.class.getName(), unenhancedProp.getType().getName());
+        assertTrue("Original type should be assignable FROM the enhanced type",
+                unenhancedProp.getType().isAssignableFrom(enhancedProp.getType()));
+        assertFalse("Enhanced type should be assignable TO the original type",
+                // in other words, enhanced type should NOT be assignable FROM the original type
+                enhancedProp.getType().isAssignableFrom(unenhancedProp.getType()));
 
         // let's see what happens with the selfTypeProperty's type
-        final Field selfTypeProperty = entityBeingModifiedModifiedType.getDeclaredField("selfTypeProperty");
-        assertEquals("Incorrect property type.", EntityBeingModified.class, selfTypeProperty.getType());
-        final Field unenhancedProp1 = selfTypeProperty.getType().getDeclaredField("prop1");
-        final Field unenhancedProp2 = selfTypeProperty.getType().getDeclaredField("prop2");
-        assertEquals("Incorrect property type.", EntityBeingEnhanced.class, unenhancedProp1.getType());
-        assertEquals("Incorrect property type.", EntityBeingEnhanced.class, unenhancedProp2.getType());
+        // self-referencing properties should NOT be implicitly modified
+        final Field selfTypeProperty = Finder.getFieldByName(entityBeingModifiedModifiedType, "selfTypeProperty");
+        assertEquals("Self-referencing properties should NOT be implicitly modified.", 
+                EntityBeingModified.class, selfTypeProperty.getType());
     }
 
     @Test
     public void test_correct_modification_of_top_level_entity() throws Exception {
-        // get the enhanced EntityBeingEnhanced type
-        final Class<?> entityBeingEnhancedEnhancedType = cl.startModification(EntityBeingEnhanced.class)
+        // enhance(EntityBeingEnhanced)
+        final Class<? extends EntityBeingEnhanced> modEntityBeingEnhanced = cl.startModification(EntityBeingEnhanced.class)
                 .addProperties(pd)
                 .endModification();
-        // specify that what property prop1@EntityBeingModified should have its type replaced with entityBeingEnhancedEnhancedType
-        final NewProperty mp = NewProperty.changeType("prop1", entityBeingEnhancedEnhancedType);
+        // EntityBeingModified.prop1 should have its type replaced with modEntityBeingEnhanced
+        final NewProperty np = NewProperty.changeType("prop1", modEntityBeingEnhanced);
         // get the modified EntityBeingModified type
-        final Class<?> entityBeingModifiedModifiedType = cl.startModification(EntityBeingModified.class)
-                .modifyProperties(mp)
+        final Class<? extends EntityBeingModified> entityBeingModifiedModifiedType = cl.startModification(EntityBeingModified.class)
+                .modifyProperties(np)
                 .endModification();
-        // specify that properties prop1@TopLevelEntity and prop2@TopLevelEntity should have their type replaced with entityBeingModifiedModifiedType
-        final NewProperty topLevelMp1 = NewProperty.changeType("prop1", entityBeingModifiedModifiedType);
-        final NewProperty topLevelMp2 = NewProperty.changeType("prop2", entityBeingModifiedModifiedType);
+        // TopLevelEntity.prop1 and TopLevelEntity.prop2 should have their type replaced with entityBeingModifiedModifiedType
+        final NewProperty topLevelNp1 = NewProperty.changeType("prop1", entityBeingModifiedModifiedType);
+        final NewProperty topLevelNp2 = NewProperty.changeType("prop2", entityBeingModifiedModifiedType);
         // get the modified TopLevelEntity type
-        final Class<?> topLevelEntityModifiedType = cl.startModification(TopLevelEntity.class)
-                .modifyProperties(topLevelMp1, topLevelMp2)
+        final Class<? extends TopLevelEntity> topLevelEntityModifiedType = cl.startModification(TopLevelEntity.class)
+                .modifyProperties(topLevelNp1, topLevelNp2)
                 .endModification();
         // create a new instance of the modified TopLevelEntity type
-        final Object topLevelEntity = topLevelEntityModifiedType.newInstance();
+        final TopLevelEntity topLevelEntity = topLevelEntityModifiedType.getConstructor().newInstance();
         assertNotNull("Should not be null.", topLevelEntity);
 
-        // let's ensure that property types are compatible -- prop2 should be compatible with prop1 as its type is a super class for type of prop1
+        // let's ensure that property types are compatible 
+        // original prop2 and prop1 are of the same type - EntityBeingModified
         final Field prop1 = topLevelEntityModifiedType.getDeclaredField("prop1");
         final Field prop2 = topLevelEntityModifiedType.getDeclaredField("prop2");
-        assertEquals("prop 1 and prop 2 should be of the same type", prop2.getType(), prop1.getType());
+        assertEquals("Enhanced prop1 and prop2 should be of the same type.", prop2.getType(), prop1.getType());
 
-        // now take one of the properties from top level entity and ensure that it's type is property modified
+        // now take one of the modified properties from the enhanced TopLevelEntity and ensure that its type is indeed modified 
         final Field enhancedProp = prop1.getType().getDeclaredField("prop1");
-        final Field unenhancedProp = prop1.getType().getDeclaredField("prop2");
-        assertTrue("Incorrect property type.",
-                enhancedProp.getType().getName().startsWith(
+        final Field unenhancedProp = Finder.getFieldByName(prop1.getType(), "prop2");
+        assertTrue("Incorrect property type.", enhancedProp.getType().getName().startsWith(
                         EntityBeingEnhanced.class.getName() + DynamicTypeNamingService.APPENDIX + "_"));
-        assertEquals("Incorrect property type.", EntityBeingEnhanced.class.getName(), unenhancedProp.getType().getName());
-        assertFalse("Original type should not be assignable to the enhanced type", unenhancedProp.getType().isAssignableFrom(enhancedProp.getType()));
-        assertFalse("Enhanced type should not be assignable to the original type", enhancedProp.getType().isAssignableFrom(unenhancedProp.getType()));
+        assertEquals("Incorrect property type.", EntityBeingEnhanced.class, unenhancedProp.getType());
+        assertTrue("Original type should be assignable FROM the enhanced type.",
+                unenhancedProp.getType().isAssignableFrom(enhancedProp.getType()));
+        assertFalse("Enhanced type should be assignable TO the original type.",
+                // in other words, enhanced type should NOT be assignable FROM the original type
+                enhancedProp.getType().isAssignableFrom(unenhancedProp.getType()));
     }
 
     @Test
-    public void test_observation_of_setter_for_new_property_in_instance_of_generated_entity_type_used_for_property_in_higher_order_type() throws Exception {
-        // get the enhanced EntityBeingEnhanced type
-        final Class<? extends AbstractEntity> entityBeingEnhancedEnhancedType = (Class<? extends AbstractEntity>) 
-                cl.startModification(EntityBeingEnhanced.class)
+    public void test_observation_of_setter_for_new_property_in_instance_of_generated_entity_type_used_for_property_in_higher_order_type()
+            throws Exception 
+    {
+        // enhance(EntityBeingEnhanced)
+        final Class<? extends EntityBeingEnhanced> modEntityBeingEnhanced = cl.startModification(EntityBeingEnhanced.class)
                 .addProperties(pd)
                 .endModification();
-        module.getDomainMetaPropertyConfig().setDefiner(entityBeingEnhancedEnhancedType, NEW_PROPERTY, new IAfterChangeEventHandler<Object>() {
+        module.getDomainMetaPropertyConfig().setDefiner(modEntityBeingEnhanced, NEW_PROPERTY, 
+                new IAfterChangeEventHandler<Object>() 
+        {
             @Override
             public void handle(final MetaProperty<Object> property, final Object entityPropertyValue) {
                 observed = true;
             }
         });
-        // specify that what property prop1@EntityBeingModified should have its type replaced with entityBeingEnhancedEnhancedType
-        final NewProperty mp = NewProperty.changeType("prop1", entityBeingEnhancedEnhancedType);
-        // get the modified EntityBeingModified type
-        final Class<? extends AbstractEntity> entityBeingModifiedModifiedType = (Class<? extends AbstractEntity>) 
-                cl.startModification(EntityBeingModified.class)
-                .modifyProperties(mp)
+
+        // enhance(EntityBeingModified)
+        //      prop1 -> modEntityBeingEnhanced
+        final NewProperty np = NewProperty.changeType("prop1", modEntityBeingEnhanced);
+        final Class<? extends EntityBeingModified> modEntityBeingModified = cl.startModification(EntityBeingModified.class)
+                .modifyProperties(np)
                 .endModification();
-        // specify that properties prop1@TopLevelEntity and prop2@TopLevelEntity should have their type replaced with entityBeingModifiedModifiedType
-        final NewProperty topLevelMp1 = NewProperty.changeType("prop1", entityBeingModifiedModifiedType);
-        final NewProperty topLevelMp2 = NewProperty.changeType("prop2", entityBeingModifiedModifiedType);
+
+        // enhance(TopLevelEntity)
+        //      prop1 -> modEntityBeingModified
+        //      prop2 -> modEntityBeingModified
+        final NewProperty topLevelNp1 = NewProperty.changeType("prop1", modEntityBeingModified);
+        final NewProperty topLevelNp2 = NewProperty.changeType("prop2", modEntityBeingModified);
         // get the modified TopLevelEntity type
-        final Class<? extends AbstractEntity> topLevelEntityModifiedType = (Class<? extends AbstractEntity>) 
-                cl.startModification(TopLevelEntity.class)
-                .modifyProperties(topLevelMp1, topLevelMp2)
+        final Class<? extends TopLevelEntity> modTopLevelEntity = cl.startModification(TopLevelEntity.class)
+                .modifyProperties(topLevelNp1, topLevelNp2)
                 .endModification();
 
         // create new instances of the modified TopLevelEntity and EntityBeingModified types using entity factory
-        final AbstractEntity<?> topLevelEntity = factory.newByKey(topLevelEntityModifiedType, "key");
-        final AbstractEntity<?> entityBeingModified = factory.newByKey(entityBeingModifiedModifiedType, "key");
-        final AbstractEntity<?> entityBeingEnhanced = factory.newByKey(entityBeingEnhancedEnhancedType, "key");
+        final TopLevelEntity topLevelEntity = factory.newByKey(modTopLevelEntity, "key");
         assertNotNull("Should not be null.", topLevelEntity);
+
+        final EntityBeingModified entityBeingModified = factory.newByKey(modEntityBeingModified, "key");
         assertNotNull("Should not be null.", entityBeingModified);
+
+        final EntityBeingEnhanced entityBeingEnhanced = factory.newByKey(modEntityBeingEnhanced, "key");
+        assertNotNull("Should not be null.", entityBeingEnhanced);
 
         topLevelEntity.set("prop1", entityBeingModified);
         entityBeingModified.set("prop1", entityBeingEnhanced);
@@ -352,100 +378,108 @@ public class DynamicEntityTypeModificationTest {
     }
 
     @Test
-    public void test_modification_of_collectional_property() throws Exception {
+    public void test_modification_of_collectional_property_signature() throws Exception {
+        // Collection<EntityBeingEnhanced> prop1;
         final Field field = Finder.findFieldByName(EntityWithCollectionalPropety.class, "prop1");
         assertTrue("Incorrect collectional type.", Collection.class.isAssignableFrom(field.getType()));
-        assertEquals("Incorrect signature for collectional property.", EntityBeingEnhanced.class, PropertyTypeDeterminator.determinePropertyType(EntityWithCollectionalPropety.class, "prop1"));
+        assertEquals("Incorrect signature for collectional property.",
+                EntityBeingEnhanced.class,
+                PropertyTypeDeterminator.determinePropertyType(EntityWithCollectionalPropety.class, "prop1"));
 
-        // get the enhanced EntityBeingEnhanced type
-        final Class<? extends AbstractEntity> entityBeingEnhancedEnhancedType = (Class<? extends AbstractEntity>) 
-                cl.startModification(EntityBeingEnhanced.class)
+        // enhance(EntityBeingEnhanced)
+        final Class<? extends EntityBeingEnhanced> modEntityBeingEnhanced = cl.startModification(EntityBeingEnhanced.class)
                 .addProperties(pd)
                 .endModification();
 
-        // modify type EntityWithCollectionalPropety by changing the signature of the collectional property
-        final NewProperty collectionalPropModification = NewProperty.changeTypeSignature("prop1", entityBeingEnhancedEnhancedType);
-        final Class<? extends AbstractEntity> modifiedType = (Class<? extends AbstractEntity>) 
-                cl.startModification(EntityWithCollectionalPropety.class)
+        // enhance(EntityWithCollectionalProperty)
+        //      prop1: Collection<EntityBeingEnhanced> -> Collection<modEntityBeingEnhanced>
+        final NewProperty collectionalPropModification = NewProperty.changeTypeSignature("prop1", modEntityBeingEnhanced);
+        final Class<? extends EntityWithCollectionalPropety> modifiedType = cl.startModification(EntityWithCollectionalPropety.class)
                 .modifyProperties(collectionalPropModification)
                 .endModification();
 
         // test the modified field attributes such as type and IsProperty annotation
-        final Field fieldOfModifiedType = Finder.findFieldByName(modifiedType, "prop1");
-        assertTrue("Incorrect collectional type.", Collection.class.isAssignableFrom(fieldOfModifiedType.getType()));
+        final Field modField = Finder.findFieldByName(modifiedType, "prop1");
+        assertTrue("Incorrect collectional type.", Collection.class.isAssignableFrom(modField.getType()));
         assertEquals("Incorrect signature for collectional property.", 
-                entityBeingEnhancedEnhancedType,
+                modEntityBeingEnhanced,
                 PropertyTypeDeterminator.determinePropertyType(modifiedType, "prop1"));
 
-        final IsProperty annotation = AnnotationReflector.getAnnotation(fieldOfModifiedType, IsProperty.class);
-        assertNotNull("There should be IsProperty annotation", annotation);
-        assertEquals("Incorrect value in IsProperty annotation", entityBeingEnhancedEnhancedType, annotation.value());
+        final IsProperty annotation = AnnotationReflector.getAnnotation(modField, IsProperty.class);
+        assertNotNull("There should be IsProperty annotation.", annotation);
+        assertEquals("Incorrect value in IsProperty annotation.", modEntityBeingEnhanced, annotation.value());
     }
 
     @Test
     public void test_getting_setting_and_observation_of_modified_collectional_property() throws Exception {
-        // get the enhanced EntityBeingEnhanced type
-        final Class<? extends AbstractEntity> entityBeingEnhancedEnhancedType = (Class<? extends AbstractEntity>) 
-                cl.startModification(EntityBeingEnhanced.class)
+        // enhance(EntityBeingEnhanced)
+        final Class<? extends EntityBeingEnhanced> modEntityBeingEnhanced = cl.startModification(EntityBeingEnhanced.class)
                 .addProperties(pd)
                 .endModification();
-        // modify type EntityWithCollectionalPropety by changing the signature of the collectional property
-        final NewProperty collectionalPropModification = NewProperty.changeTypeSignature("prop1", entityBeingEnhancedEnhancedType);
-        final Class<? extends AbstractEntity> modifiedType = (Class<? extends AbstractEntity>) 
+
+        // enhance(EntityWithCollectionalPropety)
+        //      prop1: Collection<EntityBeingEnhanced> -> Collection<modEntityBeingEnhanced>
+        final NewProperty collectionalPropModification = NewProperty.changeTypeSignature("prop1", modEntityBeingEnhanced);
+        final Class<? extends EntityWithCollectionalPropety> modEntityWithCollectionalPropety =
                 cl.startModification(EntityWithCollectionalPropety.class)
                 .modifyProperties(collectionalPropModification)
                 .endModification();
-        // get the enhanced EntityBeingEnhanced type
-        module.getDomainMetaPropertyConfig().setDefiner(modifiedType, "prop1", new IAfterChangeEventHandler<Object>() {
+
+        module.getDomainMetaPropertyConfig().setDefiner(modEntityWithCollectionalPropety, "prop1", new IAfterChangeEventHandler<Object>() {
             @Override
             public void handle(final MetaProperty<Object> property, final Object entityPropertyValue) {
                 observed = true;
             }
         });
 
-        final AbstractEntity<?> entity = factory.newByKey(modifiedType, "key");
+        final EntityWithCollectionalPropety entity = factory.newByKey(modEntityWithCollectionalPropety, "key");
         assertNotNull("Should have been instantiated.", entity);
         assertNotNull("Initial collectional property value should not be null.", entity.get("prop1"));
 
         // test mutator set and getter
         final ArrayList value = new ArrayList();
-        value.add(factory.newByKey(entityBeingEnhancedEnhancedType, "key1"));
+        value.add(factory.newByKey(modEntityBeingEnhanced, "key1"));
         entity.set("prop1", value);
         Collection result = (Collection) entity.get("prop1");
-        assertNotNull("Collectional property should have a value", result);
-        assertEquals("Incorrect number of elements in the collectional property", 1, result.size());
+        assertNotNull("Collectional property should not be null after setting.", result);
+        assertEquals("Incorrect number of elements in the collectional property.", 1, result.size());
         assertTrue("Observation should have been triggered.", observed);
     }
 
     @Test
     public void test_inner_types_usage_in_generated_classes() throws Exception {
-        final NewProperty mp = NewProperty.changeType("integerProp", BigInteger.class);
-        final Class<? extends AbstractEntity> entityBeingModifiedWithInnerType = (Class<? extends AbstractEntity>) 
+        // enhance(EntityBeingModifiedWithInnerTypes)
+        //      integerProp: Integer -> BigInteger
+        final NewProperty np = NewProperty.changeType("integerProp", BigInteger.class);
+        final Class<? extends EntityBeingModifiedWithInnerTypes> modEntityBeingModifiedWithInnerTypes = 
                 cl.startModification(EntityBeingModifiedWithInnerTypes.class)
-                .modifyProperties(mp)
+                .modifyProperties(np)
                 .endModification();
+        // EntityBeingModifiedWithInnerTypes class contains an inner type that also has a field named "integerProp"
+        // this fact should not have any effect
 
         // instance creation of the generated class with inner types does not fail
-        final Object modifiedEntity1 = entityBeingModifiedWithInnerType.newInstance();
-        assertNotNull("Should not be null.", modifiedEntity1);
+        final var instance = modEntityBeingModifiedWithInnerTypes.getConstructor().newInstance();
+        assertNotNull("Should not be null.", instance);
         try {
-            ((AbstractEntity) modifiedEntity1).set("enumProp", InnerEnum.ONE);
+            instance.set("enumProp", InnerEnum.ONE);
         } catch (final Throwable e) {
             e.printStackTrace();
             fail("The setter should not fail -- inner classes can not be loaded.");
         }
-
     }
 
     @Test
-    public void test_generated_class_with_inner_types_instantiation() throws Exception {
-        final NewProperty mp = NewProperty.changeType("integerProp", BigInteger.class);
-        final Class<? extends AbstractEntity> entityBeingModifiedWithInnerType = (Class<? extends AbstractEntity>) 
+    public void test_generated_class_with_inner_types_factory_instantiation() throws Exception {
+        // enhance(EntityBeingModifiedWithInnerTypes)
+        //      integerProp: Integer -> BigInteger
+        final NewProperty np = NewProperty.changeType("integerProp", BigInteger.class);
+        final Class<? extends EntityBeingModifiedWithInnerTypes> modEntityBeingModifiedWithInnerTypes = 
                 cl.startModification(EntityBeingModifiedWithInnerTypes.class)
-                .modifyProperties(mp)
+                .modifyProperties(np)
                 .endModification();
         try {
-            factory.newByKey(entityBeingModifiedWithInnerType, "key");
+            factory.newByKey(modEntityBeingModifiedWithInnerTypes, "key");
         } catch (final Throwable e) {
             e.printStackTrace();
             fail("The instantiation with entity factory shouldn't fail -- inner classes can not be loaded.");
@@ -453,52 +487,59 @@ public class DynamicEntityTypeModificationTest {
     }
 
     @Test
-    public void test_to_ensure_that_type_modification_leads_to_correct_getter_modificaton() throws Exception {
-        final Class<?> enhancedType = cl.startModification(EntityName.class)
+    public void type_modification_does_not_modify_existing_getters_for_untouched_properties() throws Exception {
+        final Class<? extends EntityName> enhancedType = cl.startModification(EntityName.class)
                 .addProperties(pd)
                 .endModification();
 
-        final Field prop = enhancedType.getDeclaredField("prop");
-        assertEquals("Incorrect property type", EntityNameProperty.class, prop.getType());
+        // no properties were modified so original getters should not be overriden
+        final Field prop = Finder.getFieldByName(enhancedType, "prop");
+        assertEquals("Incorrect property type.", EntityNameProperty.class, prop.getType());
 
         final Method getter = Reflector.obtainPropertyAccessor(enhancedType, "prop");
-        assertEquals("Incorrect property type", EntityNameProperty.class, getter.getReturnType());
+        assertEquals("Incorrect getter return type.", EntityNameProperty.class, getter.getReturnType());
     }
 
     @Test
-    public void one2Many_special_case_property_should_have_been_generated_correctly() throws Exception {
-        final Class<? extends AbstractEntity> one2ManyEnhancedType = (Class<? extends AbstractEntity>) 
+    public void modified_one2Many_special_case_property_is_generated_correctly() throws Exception {
+        final Class<? extends DetailsEntityForOneToManyAssociation> modOneToManyDetailsEntity = 
                 cl.startModification(DetailsEntityForOneToManyAssociation.class)
                 .addProperties(pd)
                 .endModification();
-        final NewProperty one2ManySpecialCasePropModification = NewProperty.changeType("one2manyAssociationSpecialCase", one2ManyEnhancedType);
-        final Class<? extends AbstractEntity> modifiedType = (Class<? extends AbstractEntity>) 
+
+        final NewProperty npOne2ManySpecialCase = NewProperty.changeType("one2manyAssociationSpecialCase", modOneToManyDetailsEntity);
+        final Class<? extends MasterEntityWithOneToManyAssociation> modOneToManyMasterEntity = 
                 cl.startModification(MasterEntityWithOneToManyAssociation.class)
-                .modifyProperties(one2ManySpecialCasePropModification)
-                .endModification();
-
-        assertEquals("key1", AnnotationReflector.getAnnotation(Finder.findFieldByName(modifiedType, "one2manyAssociationSpecialCase"), IsProperty.class).linkProperty());
-    }
-
-    @Test
-    public void one2Many_collectional_property_should_have_been_generated_correctly_when_isProperty_annotation_is_not_provided() throws Exception {
-        final Class<? extends AbstractEntity> one2ManyEnhancedType = (Class<? extends AbstractEntity>) 
-                cl.startModification(DetailsEntityForOneToManyAssociation.class)
-                .addProperties(pd)
-                .endModification();
-        final NewProperty one2ManyCollectionalPropModification = NewProperty.changeTypeSignature("one2manyAssociationCollectional", one2ManyEnhancedType);
-
-        final Class<? extends AbstractEntity> modifiedType = (Class<? extends AbstractEntity>) 
-                cl.startModification(MasterEntityWithOneToManyCollectionalAssociationProvidedWithLinkPropValue.class)
-                .modifyProperties(one2ManyCollectionalPropModification)
+                .modifyProperties(npOne2ManySpecialCase)
                 .endModification();
 
         assertEquals("key1", AnnotationReflector.getAnnotation(
-                    Finder.findFieldByName(modifiedType, "one2manyAssociationCollectional"), 
+                Finder.findFieldByName(modOneToManyMasterEntity, "one2manyAssociationSpecialCase"), IsProperty.class
+                ).linkProperty());
+    }
+
+    // NOTE: test name says "when IsProperty is not provided", but target entity that is being enhanced in this class
+    // has @IsProperty on the field that is being modified
+    @Test
+    public void modified_one2Many_collectional_property_is_generated_correctly_when_IsProperty_is_not_provided() throws Exception {
+        final Class<? extends DetailsEntityForOneToManyAssociation> modOneToManyDetailsEntity =
+                cl.startModification(DetailsEntityForOneToManyAssociation.class)
+                .addProperties(pd)
+                .endModification();
+
+        final NewProperty npOne2ManyCollectional = NewProperty.changeTypeSignature("one2manyAssociationCollectional",
+                modOneToManyDetailsEntity);
+        final Class<? extends MasterEntityWithOneToManyCollectionalAssociationProvidedWithLinkPropValue> modOneToManyMasterEntity = 
+                cl.startModification(MasterEntityWithOneToManyCollectionalAssociationProvidedWithLinkPropValue.class)
+                .modifyProperties(npOne2ManyCollectional)
+                .endModification();
+
+        assertEquals("key1", AnnotationReflector.getAnnotation(
+                    Finder.findFieldByName(modOneToManyMasterEntity, "one2manyAssociationCollectional"), 
                     IsProperty.class)
                 .linkProperty());
-        assertEquals(one2ManyEnhancedType, AnnotationReflector.getAnnotation(
-                    Finder.findFieldByName(modifiedType, "one2manyAssociationCollectional"),
+        assertEquals(modOneToManyDetailsEntity, AnnotationReflector.getAnnotation(
+                    Finder.findFieldByName(modOneToManyMasterEntity, "one2manyAssociationCollectional"),
                     IsProperty.class)
                 .value());
     }
